Account for non-composited scroll offset of scrollbars.

We had previously done this for other code paths, but forgot about this one.

BUG=653813
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2411193002
Cr-Commit-Position: refs/heads/master@{#424800}

Former-commit-id: 3c806bffd03ce8d303f8ba210e075515472e39d1